Bug 285037 - set mode
Summary: set mode
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-folderview (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-26 19:37 UTC by Andrey
Modified: 2011-12-01 16:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey 2011-10-26 19:37:10 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.7.2 (4.7.2)
Qt Version: 4.7.4
Operating System: Linux 3.1.0-rc9-1-desktop x86_64
Distribution: "openSUSE 12.1 RC 1 (x86_64)"

-- Information about the crash:
set mode view directory

The crash can be reproduced every time.

-- Backtrace:
Application: Оболочка Plasma (kdeinit4), signal: Segmentation fault
[Current thread is 1 (Thread 0x7ff1a03c2760 (LWP 7185))]

Thread 2 (Thread 0x7ff17d939700 (LWP 7187)):
#0  0x00007ff19da27423 in poll () from /lib64/libc.so.6
#1  0x00007ff19a81ca98 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007ff19a81cf59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007ff19f0393a6 in QEventDispatcherGlib::processEvents (this=0xfdcc10, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:424
#4  0x00007ff19f00d882 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007ff19f00da7f in QEventLoop::exec (this=0x7ff17d938df0, flags=...) at kernel/qeventloop.cpp:201
#6  0x00007ff19ef255cf in QThread::exec (this=<optimized out>) at thread/qthread.cpp:498
#7  0x00007ff19eff094f in QInotifyFileSystemWatcherEngine::run (this=0xfdcd30) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007ff19ef28015 in QThreadPrivate::start (arg=0xfdcd30) at thread/qthread_unix.cpp:331
#9  0x00007ff19ec97f05 in start_thread () from /lib64/libpthread.so.0
#10 0x00007ff19da3053d in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7ff1a03c2760 (LWP 7185)):
[KCrash Handler]
#6  d_func (this=0x0) at /usr/src/debug/kdelibs-4.7.2/kdecore/services/kmimetype.h:48
#7  KMimeType::comment (this=0x0, url=...) at /usr/src/debug/kdelibs-4.7.2/kdecore/services/kmimetype.cpp:501
#8  0x00007ff1847bdcba in ProxyMimeModel::lessThan (this=<optimized out>, left=<optimized out>, right=<optimized out>) at /usr/src/debug/kde-baseapps-4.7.2/plasma/applets/folderview/folderview.cpp:193
#9  0x00007ff19e7540f7 in operator() (r2=23, r1=<optimized out>, this=<optimized out>) at itemviews/qsortfilterproxymodel.cpp:80
#10 QAlgorithmsPrivate::qMerge<int*, int const, QSortFilterProxyModelLessThan> (begin=0x1aab60c, pivot=0x1aab610, end=0x1aab614, t=@0x1aab5b0, lessThan=...) at ../../src/corelib/tools/qalgorithms.h:424
#11 0x00007ff19e754272 in QAlgorithmsPrivate::qStableSortHelper<int*, int, QSortFilterProxyModelLessThan> (begin=0x1aab60c, end=0x1aab614, t=@0x1aab5b0, lessThan=...) at ../../src/corelib/tools/qalgorithms.h:459
#12 0x00007ff19e754209 in QAlgorithmsPrivate::qStableSortHelper<int*, int, QSortFilterProxyModelLessThan> (begin=0x1aab604, end=0x1aab614, t=@0x1aab5b0, lessThan=...) at ../../src/corelib/tools/qalgorithms.h:458
#13 0x00007ff19e7541a9 in QAlgorithmsPrivate::qStableSortHelper<int*, int, QSortFilterProxyModelLessThan> (begin=0x1aab604, end=0x1aab624, t=@0x1aab5b0, lessThan=...) at ../../src/corelib/tools/qalgorithms.h:457
#14 0x00007ff19e754209 in QAlgorithmsPrivate::qStableSortHelper<int*, int, QSortFilterProxyModelLessThan> (begin=0x1aab5e8, end=0x1aab624, t=@0x1aab5b0, lessThan=...) at ../../src/corelib/tools/qalgorithms.h:458
#15 0x00007ff19e754209 in QAlgorithmsPrivate::qStableSortHelper<int*, int, QSortFilterProxyModelLessThan> (begin=0x1aab5b0, end=0x1aab624, t=@0x1aab5b0, lessThan=...) at ../../src/corelib/tools/qalgorithms.h:458
#16 0x00007ff19e7541a9 in QAlgorithmsPrivate::qStableSortHelper<int*, int, QSortFilterProxyModelLessThan> (begin=0x1aab5b0, end=0x1aab698, t=@0x1aab5b0, lessThan=...) at ../../src/corelib/tools/qalgorithms.h:457
#17 0x00007ff19e7541a9 in QAlgorithmsPrivate::qStableSortHelper<int*, int, QSortFilterProxyModelLessThan> (begin=0x1aab5b0, end=0x1aab780, t=@0x1aab5b0, lessThan=...) at ../../src/corelib/tools/qalgorithms.h:457
#18 0x00007ff19e7541a9 in QAlgorithmsPrivate::qStableSortHelper<int*, int, QSortFilterProxyModelLessThan> (begin=0x1aab5b0, end=0x1aab954, t=@0x1aab5b0, lessThan=...) at ../../src/corelib/tools/qalgorithms.h:457
#19 0x00007ff19e7541a9 in QAlgorithmsPrivate::qStableSortHelper<int*, int, QSortFilterProxyModelLessThan> (begin=0x1aab5b0, end=0x1aabcfc, t=@0x1aab5b0, lessThan=...) at ../../src/corelib/tools/qalgorithms.h:457
#20 0x00007ff19e7541a9 in QAlgorithmsPrivate::qStableSortHelper<int*, int, QSortFilterProxyModelLessThan> (begin=0x1aab5b0, end=0x1aac448, t=@0x1aab5b0, lessThan=...) at ../../src/corelib/tools/qalgorithms.h:457
#21 0x00007ff19e74d1eb in qStableSort<int*, QSortFilterProxyModelLessThan> (lessThan=<optimized out>, end=<optimized out>, start=<optimized out>) at ../../src/corelib/tools/qalgorithms.h:212
#22 QSortFilterProxyModelPrivate::sort_source_rows (this=<optimized out>, source_rows=..., source_parent=<optimized out>) at itemviews/qsortfilterproxymodel.cpp:464
#23 0x00007ff19e74f291 in QSortFilterProxyModelPrivate::sort (this=0x1abc770) at itemviews/qsortfilterproxymodel.cpp:429
#24 0x00007ff1847c91e7 in FolderView::createConfigurationInterface (this=0x174aca0, parent=0x177ea70) at /usr/src/debug/kde-baseapps-4.7.2/plasma/applets/folderview/folderview.cpp:603
#25 0x00007ff18cec879d in BackgroundDialog::saveConfig (this=0x177ea70) at /usr/src/debug/kde-workspace-4.7.2/libs/plasmagenericshell/backgrounddialog.cpp:533
#26 0x00007ff18cec6a64 in BackgroundDialog::qt_metacall (this=0x177ea70, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff8d1a2380) at /usr/src/debug/kde-workspace-4.7.2/build/libs/plasmagenericshell/moc_backgrounddialog.cpp:157
#27 0x00007ff19f0213fa in QMetaObject::activate (sender=0x177ea70, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3287
#28 0x00007ff19fcf7cae in KDialog::slotButtonClicked (this=0x177ea70, button=8) at /usr/src/debug/kdelibs-4.7.2/kdeui/dialogs/kdialog.cpp:888
#29 0x00007ff19fcf8252 in KDialog::qt_metacall (this=0x177ea70, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0x7fff8d1a25b0) at /usr/src/debug/kdelibs-4.7.2/build/kdeui/kdialog.moc:190
#30 0x00007ff19fdcf200 in KPageDialog::qt_metacall (this=0x177ea70, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff8d1a25b0) at /usr/src/debug/kdelibs-4.7.2/build/kdeui/kpagedialog.moc:70
#31 0x00007ff19fce7fd0 in KConfigDialog::qt_metacall (this=0x177ea70, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff8d1a25b0) at /usr/src/debug/kdelibs-4.7.2/build/kdeui/kconfigdialog.moc:84
#32 0x00007ff18cec6980 in BackgroundDialog::qt_metacall (this=0x177ea70, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff8d1a25b0) at /usr/src/debug/kde-workspace-4.7.2/build/libs/plasmagenericshell/moc_backgrounddialog.cpp:151
#33 0x00007ff19f0213fa in QMetaObject::activate (sender=0x177dfa0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff8d1a25b0) at kernel/qobject.cpp:3287
#34 0x00007ff19f0275ae in QSignalMapper::mapped (this=<optimized out>, _t1=8) at .moc/release-shared/moc_qsignalmapper.cpp:101
#35 0x00007ff19f027b4b in QSignalMapper::map (this=0x177dfa0, sender=0x1795990) at kernel/qsignalmapper.cpp:266
#36 0x00007ff19f027fa0 in QSignalMapper::qt_metacall (this=0x177dfa0, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0x7fff8d1a2700) at .moc/release-shared/moc_qsignalmapper.cpp:87
#37 0x00007ff19f0213fa in QMetaObject::activate (sender=0x1795990, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff8d1a2700) at kernel/qobject.cpp:3287
#38 0x00007ff19e82bba2 in QAbstractButton::clicked (this=<optimized out>, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:206
#39 0x00007ff19e57341e in QAbstractButtonPrivate::emitClicked (this=<optimized out>) at widgets/qabstractbutton.cpp:546
#40 0x00007ff19e57475b in QAbstractButtonPrivate::click (this=0x1796460) at widgets/qabstractbutton.cpp:539
#41 0x00007ff19e5749cc in QAbstractButton::mouseReleaseEvent (this=0x1795990, e=0x7fff8d1a2fd0) at widgets/qabstractbutton.cpp:1121
#42 0x00007ff19e211236 in QWidget::event (this=0x1795990, event=0x7fff8d1a2fd0) at kernel/qwidget.cpp:8295
#43 0x00007ff19e1c0be4 in notify_helper (e=0x7fff8d1a2fd0, receiver=0x1795990, this=0x6edd20) at kernel/qapplication.cpp:4481
#44 QApplicationPrivate::notify_helper (this=0x6edd20, receiver=0x1795990, e=0x7fff8d1a2fd0) at kernel/qapplication.cpp:4453
#45 0x00007ff19e1c636b in QApplication::notify (this=<optimized out>, receiver=0x1795990, e=0x7fff8d1a2fd0) at kernel/qapplication.cpp:4042
#46 0x00007ff19fda0e36 in KApplication::notify (this=0x6df470, receiver=0x1795990, event=0x7fff8d1a2fd0) at /usr/src/debug/kdelibs-4.7.2/kdeui/kernel/kapplication.cpp:311
#47 0x00007ff19f00e67c in QCoreApplication::notifyInternal (this=0x6df470, receiver=0x1795990, event=0x7fff8d1a2fd0) at kernel/qcoreapplication.cpp:787
#48 0x00007ff19e1c1bb2 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../src/corelib/kernel/qcoreapplication.h:215
#49 QApplicationPrivate::sendMouseEvent (receiver=0x1795990, event=0x7fff8d1a2fd0, alienWidget=0x1795990, nativeWidget=0x177ea70, buttonDown=0x1795990, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3141
#50 0x00007ff19e23dad5 in QETWidget::translateMouseEvent (this=0x177ea70, event=<optimized out>) at kernel/qapplication_x11.cpp:4472
#51 0x00007ff19e23c9aa in QApplication::x11ProcessEvent (this=0x6df470, event=0x7fff8d1a3890) at kernel/qapplication_x11.cpp:3598
#52 0x00007ff19e264222 in x11EventSourceDispatch (s=0x6f2170, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#53 0x00007ff19a81c58d in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#54 0x00007ff19a81cd88 in ?? () from /usr/lib64/libglib-2.0.so.0
#55 0x00007ff19a81cf59 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#56 0x00007ff19f03933f in QEventDispatcherGlib::processEvents (this=0x6ecc00, flags=<optimized out>) at kernel/qeventdispatcher_glib.cpp:422
#57 0x00007ff19e263eae in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=<optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#58 0x00007ff19f00d882 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#59 0x00007ff19f00da7f in QEventLoop::exec (this=0x7fff8d1a3c60, flags=...) at kernel/qeventloop.cpp:201
#60 0x00007ff19f011c47 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#61 0x00007ff18d800773 in kdemain (argc=1, argv=0x6300e0) at /usr/src/debug/kde-workspace-4.7.2/plasma/desktop/shell/main.cpp:120
#62 0x0000000000408897 in _start ()

Reported using DrKonqi
Comment 1 Aaron J. Seigo 2011-12-01 16:16:35 UTC
Git commit 1796a65e3ab10ef3781cb9b4a649957e86f9dcd8 by Aaron Seigo.
Committed on 01/12/2011 at 17:15.
Pushed by aseigo into branch 'KDE/4.7'.

mime ptr may be null apparently

BUG:285037

M  +21   -2    plasma/applets/folderview/folderview.cpp

http://commits.kde.org/kde-baseapps/1796a65e3ab10ef3781cb9b4a649957e86f9dcd8
Comment 2 Aaron J. Seigo 2011-12-01 16:16:35 UTC
Git commit 3afe5541239e5640d2232f53ee43fbccbd4c83b3 by Aaron Seigo.
Committed on 01/12/2011 at 17:15.
Pushed by aseigo into branch 'master'.

mime ptr may be null apparently

BUG:285037

M  +21   -2    plasma/applets/folderview/folderview.cpp

http://commits.kde.org/kde-baseapps/3afe5541239e5640d2232f53ee43fbccbd4c83b3