mime ptr may be null apparently

BUG:285037